--- a/index.html
+++ b/index.html
@@ -123,9 +123,18 @@
 
     <h3 id="research-and-work-experience">Experience</h3>
     <div>
+      <strong>Berkeley Lab</strong> — <em>Postdoctoral Scholar at the Advanced Light Source</em> — September 2019 - Present
+      <ul>
+        <li>Supervisor: <a href="https://als.lbl.gov/people/simon-leemann/">Dr. Simon C. Leemann</a></li>
+        <li>Applying and developing ML schemes to enhance accelerator control.</li>
+        <li>Applying to the operating accelerator.</li>
+      </ul>
+    </div>
+
+    <div>
       <strong>Oak Ridge National Laboratory</strong> — <em>Graduate Research Assistant at ARM Data Center</em> — October 2017-August 2019
       <ul>
-        <li>Mentor: <a href="https://www.climatemodeling.org/~jkumar/">Jitendra Kumar</a></li>
+        <li>Mentor: <a href="https://www.climatemodeling.org/~jkumar/">Dr. Jitendra Kumar</a></li>
         <li>NEXRAD data classification using deep learning models.</li>
         <li>Detecting outliers in streaming time series data from ARM distributed sensors.</li>
       </ul>
@@ -157,19 +166,25 @@
       </ul>
     </div>
 
-    <div>
-      <strong><a href="http://www.iwhalecloud.com/page1?_l=en">ZTEsoft</a> (now Whale Cloud)</strong> — <em>Implementation Engineer</em> — July 2011-May 2012
-      <ul>
-        <li>Worked on two main projects.</li>
-        <li>Lima, Peru Perusat Wimax CvBS Operations &amp; Maintenance Project.</li>
-        <li>Santiago, Chile VTR OCS Project.</li>
-      </ul>
-    </div>
-
     <h3 id="publications">Publications</h3>
 
     <h4 id="conference-papers">Conference Papers</h4>
     <ul>
+      <li>
+        <div class="pub">
+          <strong>
+            <a href="#" class="pub-title">
+            Convolutional Neural Networks for Hydrometeor Classification using Dual Polarization Doppler Radars
+            </a>
+          </strong><br/>
+          Yuping Lu, Jitendra Kumar<br/>
+          <span class="venue"><a href="#">Proceedings of the 2019 IEEE International Conference on Data Mining Workshops</a></span> (ICDMW 2019)<br/>
+          <span class="pub">
+            <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
+            <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
+          </span>
+        </div>
+      </li>
       <li>
         <div class="pub">
           <strong>
@@ -189,21 +204,6 @@
 
     <h4 id="journal-papers">Journal Papers</h4>
     <ul>
-      <li>
-        <div class="pub">
-          <strong>
-            <a href="#" class="pub-title">
-            Convolutional Neural Networks for Hydrometeor Classification using Dual Polarization Doppler Radars
-            </a>
-          </strong><br/>
-          Yuping Lu, Jitendra Kumar<br/>
-          <span class="venue"><a href="#"></a></span> — To be submitted<br/>
-          <span class="pub">
-            <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
-            <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
-          </span>
-        </div>
-      </li>
       <li>
         <div class="pub">
           <strong>
@@ -242,7 +242,7 @@
             </a>
           </strong><br/>
           Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
-          <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a></span> — Under final round review<br/>
+          <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a></span> — Accepted<br/>
           <span class="pub">
             <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
             <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
