--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </li>
 
       </ul>
-      <h2><a class="black" href="/">Yuping (Allan) Lu</a></h2>
+      <h2><a class="black" href="/">Yuping Lu</a></h2>
     </div>
 
     <p class="contact">
