--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <strong>Berkeley Lab</strong> — <em>Postdoctoral Scholar at the Advanced Light Source</em> — September 2019 - Present
       <ul>
         <li>Supervisor: <a href="https://als.lbl.gov/people/simon-leemann/">Dr. Simon C. Leemann</a></li>
-        <li>Applying and developing ML schemes to enhance accelerator control.</li>
+        <li>Applying and developing Machine Learning schemes to enhance accelerator control.</li>
         <li>Applying to the operating accelerator.</li>
       </ul>
     </div>
