--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <div>
       <strong>Oak Ridge National Laboratory</strong> — <em>Research Intern at the Scientific Data Group</em> — Summer 2017, Summer 2016
       <ul>
-        <li>Mentor: <a href="http://www.csm.ornl.gov/~ost/">George Ostrouchov</a></li>
+        <li>Mentor: <a href="http://www.csm.ornl.gov/~ost/">Dr. George Ostrouchov</a></li>
         <li>Scaling a PheWAS logistic regression R code on a cluster computer with pbdR tools in a parallel package, 2017.</li>
         <li>Implemented an R package pbdADIOS to connect R with ADIOS parallel middleware for IO, 2016.</li>
         <li>Most functions in pbdADIOS are implemented with C++.</li>
