--- a/index.html
+++ b/index.html
@@ -170,6 +170,21 @@
 
     <h4 id="conference-papers">Conference Papers</h4>
     <ul>
+        <li>
+        <div class="pub">
+          <strong>
+            <a href="#" class="pub-title">
+            Clique Selection and its Effect on Paraclique Enrichment: An Experimental Study
+            </a>
+          </strong><br/>
+          Yuping Lu, Charles A. Phillips, Elissa J. Chesler, Michael A. Langston<br/>
+          <span class="venue"><a href="https://sceweb.uhcl.edu/bicob20/">BICoB 2020</a></span> — Accepted<br/>
+          <span class="pub">
+            <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
+            <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
+          </span>
+        </div>
+      </li>
       <li>
         <div class="pub">
           <strong>
@@ -222,30 +237,15 @@
       <li>
         <div class="pub">
           <strong>
-            <a href="#" class="pub-title">
-            Clique Selection and its Effect on Paraclique Enrichment: An Experimental Study
-            </a>
-          </strong><br/>
-          Yuping Lu, Charles A. Phillips, Elissa J. Chesler, Michael A. Langston<br/>
-          <span class="venue"><a href="https://bmcresnotes.biomedcentral.com/">BMC Research Notes</a></span> — Under review<br/>
-          <span class="pub">
-            <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
-            <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
-          </span>
-        </div>
-      </li>
-      <li>
-        <div class="pub">
-          <strong>
-            <a href="#" class="pub-title">
+            <a href="/files/robust.pdf" class="pub-title">
             A Robustness Metric for Biological Data Clustering Algorithms
             </a>
           </strong><br/>
           Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
-          <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a></span> — Accepted<br/>
+          <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a></span> — 20, 503 (2019) doi:10.1186/s12859-019-3089-6<br/>
           <span class="pub">
-            <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
-            <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
+            <a href="/files/robust.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
+            <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/s12859-019-3089-6"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
           </span>
         </div>
       </li>
@@ -390,7 +390,7 @@
     </ul>
 
     <div class="footer">
-      <p>&copy; 2019 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2019-09-20</p>
+      <p>&copy; 2020 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2020-01-06</p>
     </div>
   </div>
 
