--- a/index.html
+++ b/index.html
@@ -188,22 +188,22 @@
       <li>
         <div class="pub">
           <strong>
-            <a href="#" class="pub-title">
+            <a href="/files/icdmw2019.pdf" class="pub-title">
             Convolutional Neural Networks for Hydrometeor Classification using Dual Polarization Doppler Radars
             </a>
           </strong><br/>
           Yuping Lu, Jitendra Kumar<br/>
-          <span class="venue"><a href="#">Proceedings of the 2019 IEEE International Conference on Data Mining Workshops</a></span> (ICDMW 2019)<br/>
+          <span class="venue"><a href="https://ieeexplore.ieee.org/xpl/conhome/8949436/proceeding">Proceedings of the 2019 IEEE International Conference on Data Mining Workshops</a></span> (ICDMW 2019)<br/>
           <span class="pub">
-            <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
-            <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
+            <a href="/files/icdmw2019.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
+            <a href="https://ieeexplore.ieee.org/document/8955644"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
           </span>
         </div>
       </li>
       <li>
         <div class="pub">
           <strong>
-            <a href="#" class="pub-title">
+            <a href="/files/icdmw2018.pdf" class="pub-title">
             Detecting Outliers in Streaming Time Series Data from ARM Distributed Sensors
             </a>
           </strong><br/>
