Update biclique paper

--- a/index.html
+++ b/index.html
@@ -222,15 +222,15 @@
       <li>
         <div class="pub">
           <strong>
-            <a href="#" class="pub-title">
+            <a href="/files/biclique.pdf" class="pub-title">
             Biclique: Maximal Biclique Enumeration in Bipartite Graphs
             </a>
           </strong><br/>
           Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
-          <span class="venue"><a href="https://bmcresnotes.biomedcentral.com/">BMC Research Notes</a></span> — Accepted<br/>
+          <span class="venue"><a href="https://bmcresnotes.biomedcentral.com/">BMC Research Notes</a></span> — 13, 88 (2020) doi:10.1186/s13104-020-04955-0<br/>
           <span class="pub">
-            <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
-            <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
+            <a href="/files/biclique.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
+            <a href="https://bmcresnotes.biomedcentral.com/articles/10.1186/s13104-020-04955-0"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
           </span>
         </div>
       </li>
@@ -390,7 +390,7 @@
     </ul>
 
     <div class="footer">
-      <p>&copy; 2020 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2020-02-11</p>
+      <p>&copy; 2020 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2020-02-21</p>
     </div>
   </div>
 
