Add CBB reviewer

--- a/index.html
+++ b/index.html
@@ -348,6 +348,18 @@
       <li>
         <div class="pub">
           <strong>
+            <a href="http://www.sciencepublishinggroup.com/journal/peerreviewers?journalid=112" class="pub-title">
+            Reviewer, Computational Biology and Bioinformatics, 2020-2022.
+            </a>
+          </strong><br/>
+          <span class="pub">
+            <a href="http://www.sciencepublishinggroup.com/journal/peerreviewers?journalid=112"><i class="fa fa-globe" aria-hidden="true"></i> Web</a>
+          </span>
+        </div>
+      </li>
+      <li>
+        <div class="pub">
+          <strong>
             <a href="/files/FAW2015.pdf" class="pub-title">
             Reviewer, 9th International Workshop on Frontiers in Algorithmics, FAW 2015.
             </a>
@@ -390,7 +402,7 @@
     </ul>
 
     <div class="footer">
-      <p>&copy; 2020 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2020-02-21</p>
+      <p>&copy; 2020 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2020-03-04</p>
     </div>
   </div>
 
