Update weighted paraclique paper

--- a/index.html
+++ b/index.html
@@ -173,15 +173,15 @@
         <li>
         <div class="pub">
           <strong>
-            <a href="#" class="pub-title">
+            <a href="/files/weight.pdf" class="pub-title">
             Clique Selection and its Effect on Paraclique Enrichment: An Experimental Study
             </a>
           </strong><br/>
           Yuping Lu, Charles A. Phillips, Elissa J. Chesler, Michael A. Langston<br/>
-          <span class="venue"><a href="https://sceweb.uhcl.edu/bicob20/">BICoB 2020</a></span> — Accepted<br/>
+          <span class="venue"><a href="https://sceweb.uhcl.edu/bicob20/">BICoB 2020</a></span> — Proceedings of the 12th International Conference on Bioinformatics and Computational Biology, vol 70, pages 99-108<br/>
           <span class="pub">
-            <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
-            <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
+            <a href="/files/weight.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
+            <a href="https://easychair.org/publications/paper/mDZB"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
           </span>
         </div>
       </li>
@@ -402,7 +402,7 @@
     </ul>
 
     <div class="footer">
-      <p>&copy; 2020 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2020-03-04</p>
+      <p>&copy; 2020 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2020-03-11</p>
     </div>
   </div>
 
