--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             </a>
           </strong><br/>
           Yuping Lu, Charles A. Phillips, Elissa J. Chesler, Michael A. Langston<br/>
-          <span class="venue"><a href="https://sceweb.uhcl.edu/bicob20/">Proceedings of the 12th International Conference on Bioinformatics and Computational Biology</a></span> Vol 70, pages 99-108<br/>
+          <span class="venue"><a href="https://easychair.org/publications/volume/BICOB_2020">Proceedings of the 12th International Conference on Bioinformatics and Computational Biology</a></span> (BICOB 2020)<br/>
           <span class="pub">
             <a href="/files/weights.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
             <a href="https://easychair.org/publications/paper/mDZB"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
