--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
 
     <h3 id="research-and-work-experience">Experience</h3>
     <div>
-      <strong>Berkeley Lab</strong> — <em>Postdoctoral Scholar at the Advanced Light Source</em> — September 2019 - Present
+      <strong>Lawrence Berkeley National Laboratory</strong> — <em>Postdoctoral Scholar at the Advanced Light Source</em> — September 2019 - Present
       <ul>
         <li>Supervisor: <a href="https://als.lbl.gov/people/simon-leemann/">Dr. Simon C. Leemann</a></li>
-        <li>Applying and developing Machine Learning schemes to enhance accelerator control.</li>
-        <li>Applying to the operating accelerator.</li>
+        <li>Improved algorithm for Lattice Optimization using Deep Learning.</li>
+        <li>Achieved big speedup with less running time on HPC clusters.</li>
       </ul>
     </div>
 
@@ -135,8 +135,8 @@
       <strong>Oak Ridge National Laboratory</strong> — <em>Graduate Research Assistant at ARM Data Center</em> — October 2017-August 2019
       <ul>
         <li>Mentor: <a href="https://www.climatemodeling.org/~jkumar/">Dr. Jitendra Kumar</a></li>
-        <li>NEXRAD data classification using deep learning models.</li>
-        <li>Detecting outliers in streaming time series data from ARM distributed sensors.</li>
+        <li>Radar data (NEXRAD, ARM CSAPR) classification using convolutional neural networks.</li>
+        <li>Detected outliers in streaming time series data from ARM distributed sensors.</li>
       </ul>
     </div>
     
@@ -402,7 +402,7 @@
     </ul>
 
     <div class="footer">
-      <p>&copy; 2020 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2020-03-11</p>
+      <p>&copy; 2020 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2020-07-26</p>
     </div>
   </div>
 
