Add ipac paper and poster

--- a/index.html
+++ b/index.html
@@ -171,6 +171,21 @@
     <h4 id="conference-papers">Conference Papers</h4>
     <ul>
         <li>
+          <div class="pub">
+            <strong>
+              <a href="/files/ipac21.pdf" class="pub-title">
+              Enhancing the MOGA optimization process at ALS-U with Machine Learning
+              </a>
+            </strong><br/>
+            Yuping Lu, Simon C. Leemann, Changchun Sun, Michael P. Ehrlichman, Thorsten Hellert, Hiroshi Nishimura, Marco Venturini<br/>
+            <span class="venue"><a href="https://www.ipac21.org/">IPAC 21</a></span> (2021)<br/>
+            <span class="pub">
+              <a href="/files/ipac21.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
+              <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
+            </span>
+          </div>
+        </li>
+        <li>
         <div class="pub">
           <strong>
             <a href="/files/weights.pdf" class="pub-title">
@@ -268,6 +283,21 @@
 
     <h4 id="posters">Posters & Short Papers</h4>
     <ul>
+      <li>
+        <div class="pub">
+          <strong>
+            <a href="/files/ipac_21_poster.pdf" class="pub-title">
+            Enhancing the MOGA optimization process at ALS-U with Machine Learning
+            </a>
+          </strong><br/>
+          Yuping Lu, Simon C. Leemann, Changchun Sun, Michael P. Ehrlichman, Thorsten Hellert, Hiroshi Nishimura, Marco Venturini<br/>
+          <span class="venue"><a href="https://www.ipac21.org/">IPAC 21</a></span>
+          — Campinas, Brazil, May 24, 2021<br/>
+          <span class="pub">
+            <a href="/files/ipac_21_poster.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Poster</a>
+          </span>
+        </div>
+      </li>
       <li>
         <div class="pub">
           <strong>
@@ -402,7 +432,7 @@
     </ul>
 
     <div class="footer">
-      <p>&copy; 2020 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2020-07-26</p>
+      <p>&copy; 2021 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2021-06-19</p>
     </div>
   </div>
 
