--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <ul>
         <li>Supervisor: <a href="https://als.lbl.gov/people/simon-leemann/">Dr. Simon C. Leemann</a></li>
         <li>Improved algorithm for Lattice Optimization using Deep Learning.</li>
-        <li>Achieved big speedup with less running time on HPC clusters.</li>
+        <li>Achieved big speedup on HPC clusters.</li>
       </ul>
     </div>
 
