--- a/index.html
+++ b/index.html
@@ -257,47 +257,41 @@
         <ul>
             <li>
                 <div class="pub">
-                  <strong>
-                    <a href="/files/ipac_21_poster.pdf" class="pub-title">
-                    Enhancing the MOGA optimization process at ALS-U with Machine Learning
-                    </a>
-                  </strong><br/>
-                  Yuping Lu, Simon C. Leemann, Changchun Sun, Michael P. Ehrlichman, Thorsten Hellert, Hiroshi Nishimura, Marco Venturini<br/>
-                  <span class="venue"><a href="https://www.ipac21.org/">IPAC 21</a></span>
-                  — Campinas, Brazil, May 24, 2021<br/>
-                  <span class="pub">
-                    <a href="/files/ipac_21_poster.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Poster</a>
-                  </span>
+                    <strong>
+                        <a href="/files/ipac_21_poster.pdf" class="pub-title">Enhancing the MOGA optimization process at ALS-U with Machine Learning</a>
+                    </strong><br/>
+                    Yuping Lu, Simon C. Leemann, Changchun Sun, Michael P. Ehrlichman, Thorsten Hellert, Hiroshi Nishimura, Marco Venturini<br/>
+                    <span class="venue"><a href="https://www.ipac21.org/">IPAC 21</a></span>
+                    — Campinas, Brazil, May 24, 2021<br/>
+                    <span class="pub">
+                        <a href="/files/ipac_21_poster.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Poster</a>
+                    </span>
                 </div>
-              </li>
-              <li>
+            </li>
+            <li>
                 <div class="pub">
-                  <strong>
-                    <a href="/files/PI2019poster.pdf" class="pub-title">
-                    Convolutional Neural Networks for Hydrometeor Classification Using Dual Polarization Doppler Radars
-                    </a>
-                  </strong><br/>
-                  Yuping Lu, Jitendra Kumar<br/>
-                  <span class="venue"><a href="https://www.orau.gov/2019armasr/">2019 ARM/ASR PI Meeting</a></span>
-                  — Rockville, MD, June 11, 2019<br/>
-                  <span class="pub">
-                    <a href="/files/PI2019poster.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Poster</a>
-                  </span>
+                    <strong>
+                        <a href="/files/PI2019poster.pdf" class="pub-title">Convolutional Neural Networks for Hydrometeor Classification Using Dual Polarization Doppler Radars</a>
+                    </strong><br/>
+                    Yuping Lu, Jitendra Kumar<br/>
+                    <span class="venue"><a href="https://www.orau.gov/2019armasr/">2019 ARM/ASR PI Meeting</a></span>
+                    — Rockville, MD, June 11, 2019<br/>
+                    <span class="pub">
+                        <a href="/files/PI2019poster.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Poster</a>
+                    </span>
                 </div>
-              </li>
-              <li>
+            </li>
+            <li>
                 <div class="pub">
-                  <strong>
-                    <a href="/files/bio2016.pdf" class="pub-title">
-                    Enrichment vs Robustness: A Comparison of Transcriptomic Data Clustering Metrics
-                    </a>
-                  </strong><br/>
-                  Yuping Lu, Charles A Phillips, Michael A Langston<br/>
-                  <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a></span> — 17(Suppl 10):P10, August 2016<br/>
-                  <span class="pub">
-                    <a href="/files/bio2016.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> |
-                    <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/s12859-016-1154-y"><i class="fa fa-globe" aria-hidden="true"></i> Web</a>
-                  </span>
+                    <strong>
+                        <a href="/files/bio2016.pdf" class="pub-title">Enrichment vs Robustness: A Comparison of Transcriptomic Data Clustering Metrics</a>
+                    </strong><br/>
+                    Yuping Lu, Charles A Phillips, Michael A Langston<br/>
+                    <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a></span> — 17(Suppl 10):P10, August 2016<br/>
+                    <span class="pub">
+                        <a href="/files/bio2016.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> |
+                        <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/s12859-016-1154-y"><i class="fa fa-globe" aria-hidden="true"></i> Web</a>
+                    </span>
                 </div>
             </li>
         </ul>
@@ -306,41 +300,35 @@
         <ul>
             <li>
                 <div class="pub">
-                  <strong>
-                    <a href="https://www.orau.gov/2019armasr/" class="pub-title">
-                    Deep Convolutional Neural Networks for Hydrometeor Classification using Dual Polarization Doppler Radars
-                    </a>
-                  </strong><br/>
-                  2019 ARM/ASR PI Meeting, Rockville, MD, June 10, 2019<br/>
-                  <span class="pub">
-                    <a href="/files/PI2019.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Slides</a>
-                  </span>
+                    <strong>
+                        <a href="https://www.orau.gov/2019armasr/" class="pub-title">Deep Convolutional Neural Networks for Hydrometeor Classification using Dual Polarization Doppler Radars</a>
+                    </strong><br/>
+                    2019 ARM/ASR PI Meeting, Rockville, MD, June 10, 2019<br/>
+                    <span class="pub">
+                        <a href="/files/PI2019.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Slides</a>
+                    </span>
                 </div>
               </li>
               <li>
                 <div class="pub">
-                  <strong>
-                    <a href="/files/isbra2018proceedings.pdf" class="pub-title">
-                    A Robustness Metric for Biological Data Clustering Algorithms
-                    </a>
-                  </strong><br/>
-                  ISBRA 2018, Beijing, China, June 10, 2018<br/>
-                  <span class="pub">
-                    <a href="/files/robustness.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Slides</a>
-                  </span>
+                    <strong>
+                        <a href="/files/isbra2018proceedings.pdf" class="pub-title">A Robustness Metric for Biological Data Clustering Algorithms</a>
+                    </strong><br/>
+                    ISBRA 2018, Beijing, China, June 10, 2018<br/>
+                    <span class="pub">
+                        <a href="/files/robustness.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Slides</a>
+                    </span>
                 </div>
               </li>
               <li>
                 <div class="pub">
-                  <strong>
-                    <a href="/files/ARM-yl.pdf" class="pub-title">
-                    Outlier Detection for SGPMET Data
-                    </a>
-                  </strong><br/>
-                  Oak Ridge National Laboratory, April 04, 2018<br/>
-                  <span class="pub">
-                    <a href="/files/ARM-yl.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Slides</a>
-                  </span>
+                    <strong>
+                        <a href="/files/ARM-yl.pdf" class="pub-title">Outlier Detection for SGPMET Data</a>
+                    </strong><br/>
+                    Oak Ridge National Laboratory, April 04, 2018<br/>
+                    <span class="pub">
+                        <a href="/files/ARM-yl.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Slides</a>
+                    </span>
                 </div>
             </li>
         </ul>
@@ -349,40 +337,34 @@
         <ul>
             <li>
                 <div class="pub">
-                  <strong>
-                    <a href="http://www.sciencepublishinggroup.com/journal/peerreviewers?journalid=112" class="pub-title">
-                    Reviewer, Computational Biology and Bioinformatics, 2020-2022.
-                    </a>
-                  </strong><br/>
-                  <span class="pub">
-                    <a href="http://www.sciencepublishinggroup.com/journal/peerreviewers?journalid=112"><i class="fa fa-globe" aria-hidden="true"></i> Web</a>
-                  </span>
+                    <strong>
+                        <a href="http://www.sciencepublishinggroup.com/journal/peerreviewers?journalid=112" class="pub-title">Reviewer, Computational Biology and Bioinformatics, 2020-2022.</a>
+                    </strong><br/>
+                    <span class="pub">
+                        <a href="http://www.sciencepublishinggroup.com/journal/peerreviewers?journalid=112"><i class="fa fa-globe" aria-hidden="true"></i> Web</a>
+                    </span>
                 </div>
               </li>
               <li>
                 <div class="pub">
-                  <strong>
-                    <a href="/files/FAW2015.pdf" class="pub-title">
-                    Reviewer, 9th International Workshop on Frontiers in Algorithmics, FAW 2015.
-                    </a>
-                  </strong><br/>
-                  <span class="pub">
-                    <a href="/files/FAW2015.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> |
-                    <a href="https://link.springer.com/book/10.1007/978-3-319-19647-3"><i class="fa fa-globe" aria-hidden="true"></i> Web</a>
-                  </span>
+                    <strong>
+                        <a href="/files/FAW2015.pdf" class="pub-title">Reviewer, 9th International Workshop on Frontiers in Algorithmics, FAW 2015.</a>
+                    </strong><br/>
+                    <span class="pub">
+                        <a href="/files/FAW2015.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> |
+                        <a href="https://link.springer.com/book/10.1007/978-3-319-19647-3"><i class="fa fa-globe" aria-hidden="true"></i> Web</a>
+                    </span>
                 </div>
               </li>
               <li>
                 <div class="pub">
-                  <strong>
-                    <a href="/files/WALCOM2015.pdf" class="pub-title">
-                    Reviewer, 9th International Workshop on Algorithms and Computation, WALCOM 2015.
-                    </a>
-                  </strong><br/>
-                  <span class="pub">
-                    <a href="/files/WALCOM2015.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> |
-                    <a href="https://link.springer.com/book/10.1007%2F978-3-319-15612-5"><i class="fa fa-globe" aria-hidden="true"></i> Web</a>
-                  </span>
+                    <strong>
+                        <a href="/files/WALCOM2015.pdf" class="pub-title">Reviewer, 9th International Workshop on Algorithms and Computation, WALCOM 2015.</a>
+                    </strong><br/>
+                    <span class="pub">
+                        <a href="/files/WALCOM2015.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> |
+                        <a href="https://link.springer.com/book/10.1007%2F978-3-319-15612-5"><i class="fa fa-globe" aria-hidden="true"></i> Web</a>
+                    </span>
                 </div>
             </li>
         </ul>
@@ -391,14 +373,12 @@
         <ul>
             <li>
                 <div class="pub">
-                  <strong>
-                    <a href="https://www.xsede.org/" class="pub-title">
-                    XSEDE14 : Atlanta, GA, USA. July 13-18, 2014
-                    </a>
-                  </strong><br/>
-                  <span class="pub">
-                    <a href="https://www.xsede.org/"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
-                  </span>
+                    <strong>
+                        <a href="https://www.xsede.org/" class="pub-title">XSEDE14 : Atlanta, GA, USA. July 13-18, 2014</a>
+                    </strong><br/>
+                    <span class="pub">
+                        <a href="https://www.xsede.org/"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
+                    </span>
                 </div>
             </li>
         </ul>
