--- a/index.html
+++ b/index.html
@@ -109,16 +109,18 @@
 
         <h3 id="research-and-work-experience">Experience</h3>
         <div>
-            <strong>Lawrence Berkeley National Laboratory</strong> — <em>Postdoctoral Scholar at the Advanced Light Source</em> — September 2019 - Present
+            <strong>Lawrence Berkeley National Laboratory</strong> — Berkeley, CA
+            <p><em>Postdoctoral Scholar, the Advanced Light Source</em> — 2019 - Present</p>
             <ul>
                 <li>Supervisor: <a href="https://als.lbl.gov/people/simon-leemann/">Dr. Simon C. Leemann</a></li>
-                <li>Improved algorithm for Lattice Optimization using Deep Learning.</li>
-                <li>Achieved big speedup on HPC clusters.</li>
+                <li>Improved multi-objective genetic algorithm for Lattice Optimization using Deep Learning.</li>
+                <li>Achieved orders of magnitude speedup on HPC clusters.</li>
             </ul>
         </div>
 
         <div>
-            <strong>Oak Ridge National Laboratory</strong> — <em>Graduate Research Assistant at ARM Data Center</em> — October 2017-August 2019
+            <strong>Oak Ridge National Laboratory</strong> — 
+            <p><em>Graduate Research Assistant, the Atmospheric Radiation Measurement (ARM) Data Center</em> — 2017 - 2019</p>
             <ul>
                 <li>Mentor: <a href="https://www.climatemodeling.org/~jkumar/">Dr. Jitendra Kumar</a></li>
                 <li>Radar data (NEXRAD, ARM CSAPR) classification using convolutional neural networks.</li>
@@ -127,7 +129,8 @@
         </div>
         
         <div>
-            <strong>The University of Tennessee, Knoxville</strong> — <em>Graduate Research Assistant at Office of Information Technology</em> — July 2014-October 2017
+            <strong>The University of Tennessee, Knoxville</strong> — 
+            <p><em>Graduate Research Assistant, the Office of Information Technology</em> — 2014 - 2017</p>
             <ul>
                 <li>University web server configuration and optimization.</li>
                 <li>Google Search Appliance administration and implementation.</li>
@@ -135,20 +138,31 @@
         </div>
 
         <div>
-            <strong>Oak Ridge National Laboratory</strong> — <em>Research Intern at the Scientific Data Group</em> — Summer 2017, Summer 2016
+            <strong>Oak Ridge National Laboratory</strong> — 
+            <p><em>Research Intern, the Scientific Data Group</em> — Summer 2017, Summer 2016</p>
             <ul>
                 <li>Mentor: <a href="http://www.csm.ornl.gov/~ost/">Dr. George Ostrouchov</a></li>
-                <li>Scaling a PheWAS logistic regression R code on a cluster computer with pbdR tools in a parallel package, 2017.</li>
-                <li>Implemented an R package pbdADIOS to connect R with ADIOS parallel middleware for IO, 2016.</li>
-                <li>Most functions in pbdADIOS are implemented with C++.</li>
+                <li>Scaling a PheWAS logistic regression R code on HPC clusters with pbdR tools using singularity container, 2017.</li>
+                <li>Implemented an R package \href{https://github.com/YupingLu/pbdADIOS}{pbdADIOS} to connect R with ADIOS parallel middleware for I/O, 2016.</li>
+                <li>Most functions in this package are implemented with C++.</li>
             </ul>
         </div>
 
         <div>
-            <strong>The University of Tennessee, Knoxville</strong> — <em>Graduate Research Assistant at Dr. Langston’s lab</em> — Aug. 2013-July 2014
+            <strong>The University of Tennessee, Knoxville</strong> — 
+            <p><em>Graduate Research Assistant, Dr. Langston’s lab</em> — 2013 - 2014</p>
             <ul>
-                <li>Upgraded <a href="https://grappa.eecs.utk.edu/">GrAPPA</a> which is a web-based interface built on the Galaxy framework for the graph-based tools.</li>
-                <li>It includes all the necessary tools to do a complete microarray analysis, from uploading RAW microarray data to postprocessing visualization tools.</li>
+                <li>Implemented an R package <a href="https://github.com/YupingLu/biclique">biclique</a> to enumerate maximal bicliques.</li>
+                <li>Developed <a href="https://grappa.eecs.utk.edu/">GrAPPA</a> which is a web interface built on the <a href="https://usegalaxy.org/">Galaxy</a> framework (Python) for graph-based tools.</li>
+            </ul>
+        </div>
+
+        <div>
+            <strong>Whale Cloud</strong> — 
+            <p><em>Implementation Engineer</em> — 2013 - 2014</p>
+            <ul>
+                <li>Implemented an R package <a href="https://github.com/YupingLu/biclique">biclique</a> to enumerate maximal bicliques.</li>
+                <li>Developed <a href="https://grappa.eecs.utk.edu/">GrAPPA</a> which is a web interface built on the <a href="https://usegalaxy.org/">Galaxy</a> framework (Python) for graph-based tools.</li>
             </ul>
         </div>
 
