--- a/index.html
+++ b/index.html
@@ -119,26 +119,13 @@
         </div>
 
         <div>
-            <strong>Oak Ridge National Laboratory</strong> — 
+            <strong>Oak Ridge National Laboratory</strong> — Oak Ridge, TN
             <p><em>Graduate Research Assistant, the Atmospheric Radiation Measurement (ARM) Data Center</em> — 2017 - 2019</p>
             <ul>
                 <li>Mentor: <a href="https://www.climatemodeling.org/~jkumar/">Dr. Jitendra Kumar</a></li>
                 <li>Radar data (NEXRAD, ARM CSAPR) classification using convolutional neural networks.</li>
                 <li>Detected outliers in streaming time series data from ARM distributed sensors.</li>
             </ul>
-        </div>
-        
-        <div>
-            <strong>The University of Tennessee, Knoxville</strong> — 
-            <p><em>Graduate Research Assistant, the Office of Information Technology</em> — 2014 - 2017</p>
-            <ul>
-                <li>University web server configuration and optimization.</li>
-                <li>Google Search Appliance administration and implementation.</li>
-            </ul>
-        </div>
-
-        <div>
-            <strong>Oak Ridge National Laboratory</strong> — 
             <p><em>Research Intern, the Scientific Data Group</em> — Summer 2017, Summer 2016</p>
             <ul>
                 <li>Mentor: <a href="http://www.csm.ornl.gov/~ost/">Dr. George Ostrouchov</a></li>
@@ -147,9 +134,15 @@
                 <li>Most functions in this package are implemented with C++.</li>
             </ul>
         </div>
-
+        
         <div>
-            <strong>The University of Tennessee, Knoxville</strong> — 
+            <strong>The University of Tennessee, Knoxville</strong> — Knoxville, TN
+            <p><em>Graduate Research Assistant, the Office of Information Technology</em> — 2014 - 2017</p>
+            <ul>
+                <li>University web server configuration and optimization.</li>
+                <li>Google Search Appliance administration and implementation.</li>
+            </ul>
+
             <p><em>Graduate Research Assistant, Dr. Langston’s lab</em> — 2013 - 2014</p>
             <ul>
                 <li>Implemented an R package <a href="https://github.com/YupingLu/biclique">biclique</a> to enumerate maximal bicliques.</li>
@@ -158,7 +151,7 @@
         </div>
 
         <div>
-            <strong>Whale Cloud</strong> — 
+            <strong>Whale Cloud</strong> — <em>a leading BSS/OSS system vendor for the Telecom industry</em> - Nanjing, China
             <p><em>Implementation Engineer</em> — 2013 - 2014</p>
             <ul>
                 <li>Implemented an R package <a href="https://github.com/YupingLu/biclique">biclique</a> to enumerate maximal bicliques.</li>
