--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 
         <h3 id="research-and-work-experience">Experience</h3>
         <div>
-            <strong>Lawrence Berkeley National Laboratory</strong> — Berkeley, CA
-            <em>Postdoctoral Scholar, the Advanced Light Source</em> — 2019 - Present
+            <strong>Lawrence Berkeley National Laboratory</strong> — Berkeley, CA<br/>
+            <em>Postdoctoral Scholar, the Advanced Light Source</em> — 2019 - Present<br/>
             <ul>
                 <li>Supervisor: <a href="https://als.lbl.gov/people/simon-leemann/">Dr. Simon C. Leemann</a></li>
                 <li>Improved multi-objective genetic algorithm for Lattice Optimization using Deep Learning.</li>
@@ -119,31 +119,31 @@
         </div>
 
         <div>
-            <strong>Oak Ridge National Laboratory</strong> — Oak Ridge, TN
-            <p><em>Graduate Research Assistant, the Atmospheric Radiation Measurement (ARM) Data Center</em> — 2017 - 2019</p>
+            <strong>Oak Ridge National Laboratory</strong> — Oak Ridge, TN<br/>
+            <em>Graduate Research Assistant, the Atmospheric Radiation Measurement (ARM) Data Center</em> — 2017 - 2019<br/>
             <ul>
                 <li>Mentor: <a href="https://www.climatemodeling.org/~jkumar/">Dr. Jitendra Kumar</a></li>
                 <li>Radar data (NEXRAD, ARM CSAPR) classification using convolutional neural networks.</li>
                 <li>Detected outliers in streaming time series data from ARM distributed sensors.</li>
             </ul>
-            <p><em>Research Intern, the Scientific Data Group</em> — Summer 2017, Summer 2016</p>
+            <em>Research Intern, the Scientific Data Group</em> — Summer 2017, Summer 2016<br/>
             <ul>
                 <li>Mentor: <a href="http://www.csm.ornl.gov/~ost/">Dr. George Ostrouchov</a></li>
                 <li>Scaling a PheWAS logistic regression R code on HPC clusters with pbdR tools using singularity container, 2017.</li>
-                <li>Implemented an R package \href{https://github.com/YupingLu/pbdADIOS}{pbdADIOS} to connect R with ADIOS parallel middleware for I/O, 2016.</li>
+                <li>Implemented an R package <a href="https://github.com/YupingLu/pbdADIOS">pbdADIOS</a> to connect R with ADIOS parallel middleware for I/O, 2016.</li>
                 <li>Most functions in this package are implemented with C++.</li>
             </ul>
         </div>
         
         <div>
-            <strong>The University of Tennessee, Knoxville</strong> — Knoxville, TN
-            <p><em>Graduate Research Assistant, the Office of Information Technology</em> — 2014 - 2017</p>
+            <strong>The University of Tennessee, Knoxville</strong> — Knoxville, TN<br/>
+            <em>Graduate Research Assistant, the Office of Information Technology</em> — 2014 - 2017<br/>
             <ul>
                 <li>University web server configuration and optimization.</li>
                 <li>Google Search Appliance administration and implementation.</li>
             </ul>
 
-            <p><em>Graduate Research Assistant, Dr. Langston’s lab</em> — 2013 - 2014</p>
+            <em>Graduate Research Assistant, Dr. Langston’s lab</em> — 2013 - 2014<br/>
             <ul>
                 <li>Implemented an R package <a href="https://github.com/YupingLu/biclique">biclique</a> to enumerate maximal bicliques.</li>
                 <li>Developed <a href="https://grappa.eecs.utk.edu/">GrAPPA</a> which is a web interface built on the <a href="https://usegalaxy.org/">Galaxy</a> framework (Python) for graph-based tools.</li>
@@ -151,11 +151,18 @@
         </div>
 
         <div>
-            <strong>Whale Cloud</strong> — <em>a leading BSS/OSS system vendor for the Telecom industry</em> - Nanjing, China
-            <p><em>Implementation Engineer</em> — 2013 - 2014</p>
+            <strong>Whale Cloud</strong> — <em>a leading BSS/OSS system vendor for the Telecom industry</em> - Nanjing, China<br/>
+            <em>Implementation Engineer, worked on two main projects</em> — 2013 - 2014<br/>
+            VTR OCS Project, Santiago, Chile<br/>
             <ul>
-                <li>Implemented an R package <a href="https://github.com/YupingLu/biclique">biclique</a> to enumerate maximal bicliques.</li>
-                <li>Developed <a href="https://grappa.eecs.utk.edu/">GrAPPA</a> which is a web interface built on the <a href="https://usegalaxy.org/">Galaxy</a> framework (Python) for graph-based tools.</li>
+                <li>Determined customer’s business requirements and produced technical proposal.</li>
+                <li>Responsible for communication with development \& testing teams in China for correct and timely development of customer's requirements.</li>
+            </ul>
+            Perusat Wimax CvBS Operations & Maintenance Project, Lima, Peru<br/>
+            <ul>
+                <li>Responsible to ensure smooth running of system.</li>
+                <li>Performed daily system checks in order to maintain system health.</li>
+                <li>Configuration of new price plans and business requirements into the system as required by commercial and marketing departments.</li>
             </ul>
         </div>
 
