--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             VTR OCS Project, Santiago, Chile<br/>
             <ul>
                 <li>Determined customer’s business requirements and produced technical proposal.</li>
-                <li>Responsible for communication with development \& testing teams in China for correct and timely development of customer's requirements.</li>
+                <li>Responsible for communication with development & testing teams in China for correct and timely development of customer's requirements.</li>
             </ul>
             Perusat Wimax CvBS Operations & Maintenance Project, Lima, Peru<br/>
             <ul>
