--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
 
         <div>
             <strong>Whale Cloud</strong> — <em>a leading BSS/OSS system vendor for the Telecom industry</em> - Nanjing, China<br/>
-            <em>Implementation Engineer, worked on two main projects</em> — 2013 - 2014<br/>
-            VTR OCS Project, Santiago, Chile<br/>
+            <em>Implementation Engineer, worked on two main projects</em> — 2011 - 2012<br/>
+            VTR OCS Project - Santiago, Chile<br/>
             <ul>
                 <li>Determined customer’s business requirements and produced technical proposal.</li>
                 <li>Responsible for communication with development & testing teams in China for correct and timely development of customer's requirements.</li>
             </ul>
-            Perusat Wimax CvBS Operations & Maintenance Project, Lima, Peru<br/>
+            Perusat Wimax CvBS Operations & Maintenance Project - Lima, Peru<br/>
             <ul>
                 <li>Responsible to ensure smooth running of system.</li>
                 <li>Performed daily system checks in order to maintain system health.</li>
