--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <h3 id="research-and-work-experience">Experience</h3>
         <div>
             <strong>Lawrence Berkeley National Laboratory</strong> — Berkeley, CA<br/>
-            <em>Postdoctoral Scholar, the Advanced Light Source</em> — 2019 - Present<br/>
+            Postdoctoral Scholar, the Advanced Light Source — 2019 - Present<br/>
             <ul>
                 <li>Supervisor: <a href="https://als.lbl.gov/people/simon-leemann/">Dr. Simon C. Leemann</a></li>
                 <li>Improved multi-objective genetic algorithm for Lattice Optimization using Deep Learning.</li>
@@ -120,13 +120,13 @@
 
         <div>
             <strong>Oak Ridge National Laboratory</strong> — Oak Ridge, TN<br/>
-            <em>Graduate Research Assistant, the Atmospheric Radiation Measurement (ARM) Data Center</em> — 2017 - 2019<br/>
+            Graduate Research Assistant, the Atmospheric Radiation Measurement (ARM) Data Center — 2017 - 2019<br/>
             <ul>
                 <li>Mentor: <a href="https://www.climatemodeling.org/~jkumar/">Dr. Jitendra Kumar</a></li>
                 <li>Radar data (NEXRAD, ARM CSAPR) classification using convolutional neural networks.</li>
                 <li>Detected outliers in streaming time series data from ARM distributed sensors.</li>
             </ul>
-            <em>Research Intern, the Scientific Data Group</em> — Summer 2017, Summer 2016<br/>
+            Research Intern, the Scientific Data Group — Summer 2017, Summer 2016<br/>
             <ul>
                 <li>Mentor: <a href="http://www.csm.ornl.gov/~ost/">Dr. George Ostrouchov</a></li>
                 <li>Scaling a PheWAS logistic regression R code on HPC clusters with pbdR tools using singularity container, 2017.</li>
@@ -137,13 +137,13 @@
         
         <div>
             <strong>The University of Tennessee, Knoxville</strong> — Knoxville, TN<br/>
-            <em>Graduate Research Assistant, the Office of Information Technology</em> — 2014 - 2017<br/>
+            Graduate Research Assistant, the Office of Information Technology — 2014 - 2017<br/>
             <ul>
                 <li>University web server configuration and optimization.</li>
                 <li>Google Search Appliance administration and implementation.</li>
             </ul>
 
-            <em>Graduate Research Assistant, Dr. Langston’s lab</em> — 2013 - 2014<br/>
+            Graduate Research Assistant, Dr. Langston’s lab — 2013 - 2014<br/>
             <ul>
                 <li>Implemented an R package <a href="https://github.com/YupingLu/biclique">biclique</a> to enumerate maximal bicliques.</li>
                 <li>Developed <a href="https://grappa.eecs.utk.edu/">GrAPPA</a> which is a web interface built on the <a href="https://usegalaxy.org/">Galaxy</a> framework (Python) for graph-based tools.</li>
@@ -151,8 +151,8 @@
         </div>
 
         <div>
-            <strong>Whale Cloud</strong> — <em>a leading BSS/OSS system vendor for the Telecom industry</em> - Nanjing, China<br/>
-            <em>Implementation Engineer, worked on two main projects</em> — 2011 - 2012<br/>
+            <strong>Whale Cloud</strong> — a leading BSS/OSS system vendor for the Telecom industry - Nanjing, China<br/>
+            Implementation Engineer, worked on two main projects — 2011 - 2012<br/>
             VTR OCS Project - Santiago, Chile<br/>
             <ul>
                 <li>Determined customer’s business requirements and produced technical proposal.</li>
